--- a/index.html
+++ b/index.html
@@ -62,20 +62,11 @@
 					<h1><span>Homeworks</span></h1>
 				</div>
 				<div style="float:right; text-align:left; margin-right:100px; width:70%">
-					<div style="float:left; width:20%">
+					<div style="float:left; width:50%">
 						<a class="button" href="http://zhoulw13.github.io">1</a>
 					</div>
-					<div style="float:left; width:20%">
-						<a class="button" href="#">2</a>
-					</div>
-					<div style="float:left; width:20%">
-						<a class="button" href="#">3</a>
-					</div>
-					<div style="float:left; width:20%">
-						<a class="button" href="hw/waterfall.Ajax">4</a>
-					</div>
-					<div style="float:left; width:20%">
-						<a class="button" href="#">5</a>
+					<div style="float:left; width:50%">
+						<a class="button" href="hw/waterfall.Ajax/index.html">4</a>
 					</div>
 				</div>
 			</div>
