--- a/hw/waterfall.Ajax/index.html
+++ b/hw/waterfall.Ajax/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 		<script type='text/javascript' src='script/BackToTop.js'></script>
+		<script type='text/javascript' src='script/Ajax.js'></script>
 		<script type='text/javascript' src='script/jquery-2.1.4.min.js'></script>
 	</head>
 	<body>
@@ -39,7 +40,8 @@
 				</ul>
 			</div>
 		</div>
-		<script type='text/javascript' src='script/layImg.js'></script>
-		
+		<script type="text/javascript">
+			getImg(1);
+		</script>
 	</body>
 </html>
