--- a/hw/waterfall.Ajax/index.html
+++ b/hw/waterfall.Ajax/index.html
@@ -25,17 +25,17 @@
 			<div class="img-wall">
 				<ul class="img-column" id="ul1">
 					<li id="img">
-						<a href="image/showLove (1).jpg" class="pic" target="_blank"><img src="image/showLove (1).jpg"></a>
+						<a href="image/showLove (1).jpg" class="pic" target="_blank"><img id="img1" src="image/showLove (1).jpg"></a>
 					</li>
 				</ul>
 				<ul class="img-column" id="ul2">
 					<li id="img">
-						<a href="image/showLove (2).jpg" class="pic" target="_blank"><img src="image/showLove (2).jpg"></a>
+						<a href="image/showLove (2).jpg" class="pic" target="_blank"><img id="img2" src="image/showLove (2).jpg"></a>
 					</li>
 				</ul>
 				<ul class="img-column" id="ul3">
 					<li id="img">
-						<a href="image/showLove (3).jpg" class="pic" target="_blank"><img src="image/showLove (3).jpg"></a>
+						<a href="image/showLove (3).jpg" class="pic" target="_blank"><img id="img3" src="image/showLove (3).jpg"></a>
 					</li>
 				</ul>
 			</div>
