--- a/hw/waterfall.Ajax/index.html
+++ b/hw/waterfall.Ajax/index.html
@@ -28,20 +28,25 @@
 			<hr />
 			<div class="img-wall">
 				<ul class="img-column" id="ul1">
-					<li id="img">
-						<a href="javascript:void(0);" onclick="imageclicked(this)"><img id="img1" src="images/showLove (1).jpg"></a>
+					<li id="img" class="img-text">
+						<a href="javascript:void(0);" onclick="imageclicked(this)" class="effect-steve">
+							<img id="img1" src="images/showLove (1).jpg">
+						</a>
 						<p></p>
 					</li>
 				</ul>
 				<ul class="img-column" id="ul2">
-					<li id="img">
-						<a href="javascript:void(0);" onclick="imageclicked(this)"><img id="img2" src="images/showLove (2).jpg"></a>
+					<li id="img" class="img-text">
+						<a href="javascript:void(0);" onclick="imageclicked(this)" class="effect-steve">
+							<img id="img2" src="images/showLove (2).jpg"></a>
 						<p></p>
 					</li>
 				</ul>
 				<ul class="img-column" id="ul3">
-					<li id="img">
-						<a href="javascript:void(0);" onclick="imageclicked(this)"><img id="img3" src="images/showLove (3).jpg"></a>
+					<li id="img" class="img-text">
+						<a href="javascript:void(0);" onclick="imageclicked(this)" class="effect-steve">
+							<img id="img3" src="images/showLove (3).jpg">
+						</a>
 						<p></p>
 					</li>
 				</ul>
