debug json file

--- a/hw/waterfall.Ajax/index.html
+++ b/hw/waterfall.Ajax/index.html
@@ -10,7 +10,6 @@
 		<script type='text/javascript' src='script/BackToTop.js'></script>
 		<script type='text/javascript' src='script/Ajax.js'></script>
 		<script type='text/javascript' src='script/layImg.js'></script>
-		<link rel="stylesheet" href="/css/jquery.fancybox.css" type="text/css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
@@ -27,29 +26,29 @@
 			</header>
 			<hr />
 			<div class="img-wall">
-				<ul class="img-column" id="ul1">
-					<li id="img" class="img-text">
-						<a href="javascript:void(0);" onclick="imageclicked(this)" class="effect-steve">
+				<div class="img-column" id="ul1">
+					<div id="img" class="img-text">
+						<a href="javascript:void(0);" onclick="imageclicked(this)">
 							<img id="img1" src="images/showLove (1).jpg">
 						</a>
 						<p></p>
-					</li>
-				</ul>
-				<ul class="img-column" id="ul2">
-					<li id="img" class="img-text">
-						<a href="javascript:void(0);" onclick="imageclicked(this)" class="effect-steve">
+					</div>
+				</div>
+				<div class="img-column" id="ul2">
+					<div id="img" class="img-text">
+						<a href="javascript:void(0);" onclick="imageclicked(this)">
 							<img id="img2" src="images/showLove (2).jpg"></a>
 						<p></p>
-					</li>
-				</ul>
-				<ul class="img-column" id="ul3">
-					<li id="img" class="img-text">
-						<a href="javascript:void(0);" onclick="imageclicked(this)" class="effect-steve">
+					</div>
+				</div>
+				<div class="img-column" id="ul3">
+					<div id="img" class="img-text">
+						<a href="javascript:void(0);" onclick="imageclicked(this)">
 							<img id="img3" src="images/showLove (3).jpg">
 						</a>
 						<p></p>
-					</li>
-				</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript">
