--- a/hw/waterfall.Ajax/index.html
+++ b/hw/waterfall.Ajax/index.html
@@ -8,7 +8,7 @@
 		
 		<script type='text/javascript' src='script/jquery-2.1.4.min.js'></script>
 		<script type='text/javascript' src='script/BackToTop.js'></script>
-		<script type='text/javascript' src='script/Ajax.js'></script>
+		<script type='text/javascript' src='script/script.js'></script>
 		<script type='text/javascript' src='script/layImg.js'></script>
 		<link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
