debugging geo info

--- a/hw/waterfall.Ajax/index.html
+++ b/hw/waterfall.Ajax/index.html
@@ -13,6 +13,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">
+			getPos();
 			BackToTop.init({RightDown:true});
 		</script>
 		<div id="body">
