--- a/hw/WebChat/index.html
+++ b/hw/WebChat/index.html
@@ -6,7 +6,7 @@
 		<title>Web Chat</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<script type='text/javascript' src='js/jquery-2.1.4.min.js'></script>
-		<script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
+		<script type='text/javascript' src="js/firebase.js"></script>
 		<script type='text/javascript' src='js/bootstrap.min.js'></script>
 	</head>
 	<body style="height:676px; background:gray;">
