--- a/hw/WebChat/index.html
+++ b/hw/WebChat/index.html
@@ -14,15 +14,25 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Input your Nickname</h4>
+						<h4 class="modal-title" id="myModalLabel">Nickname & Room</h4>
 					</div>
+					<!--div class="modal-body">
+						<div class="input-group">
+							<div class="input-group-btn">
+                  				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Room<span class="caret"></span></button>
+                  				<ul class="dropdown-menu">
+                  				</ul>
+               				</div>
+               				<input type="text" class="form-control" placeholder="Create A New Room" id="input-room">
+            			</div>
+					</div-->
 					<div class="modal-body">
 						<div class="input-group">
-               				<input type="text" class="form-control" placeholder="Nickname" id="input-nick">
-               				<span class="input-group-btn input-group-lg">
-				                 <button class="btn btn-primary" type="button" id="bt-nick">Start Chat!</button>
+							<input type="text" class="form-control" placeholder="Nickname" id="input-nick">
+							<span class="input-group-btn input-group-lg">
+				            	<button class="btn btn-primary" type="button" id="bt-nick">Start Chat!</button>
                				</span>
-            			</div><!-- /input-group -->
+               			</div>
 					</div>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal-dialog -->
@@ -41,14 +51,14 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-9" style="height:600px;">
-					<div class="row" id='div-message' style="width:80%; height:85%; background:white; border-radius:5px; margin:10px; overflow:scroll; overflow-x:hidden;">
+				<div class="col-lg-6" style="height:600px;">
+					<div class="row" id='div-message' style="width:100%; height:85%; background:white; border-radius:5px; margin:10px; overflow:scroll; overflow-x:hidden;">
 						 <ul id='messages' class="list-group" style="word-break:break-all;"></ul>
 					</div>
 					<div class="row">
-						<div class="input-group" style="width:80%; margin:10px;">
+						<div class="input-group" style="width:95%; margin:10px;">
 							<div class="input-group-btn">
-								<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">emoji<span class="caret"></span></button>
+								<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">emoji <span class="caret"></span></button>
 								<ul class="dropdown-menu">
 									<li class="divider"></li>
 									<div class="row">
@@ -91,9 +101,24 @@
 							</div><!-- /btn-group -->
                				<input type="text" class="form-control" id="messageInput" placeholder='Type a message...'>
                				<span class="input-group-btn input-group-lg">
-				                 <button class="btn btn-success" type="button" id="sendButton" onclick="sendclicked()">Send</button>
+				                 <button class="btn btn-success" type="button" id="sendButton">Send</button>
                				</span>
             			</div><!-- /input-group -->
+					</div>
+				</div>
+				<div class="col-lg-3"  id="create-room" style="height:600px; background:white; padding:10px; border-radius:5px; overflow:scroll; overflow-x:hidden">
+					<div class="input-group" style="margin-bottom:10px;">
+						<input type="text" class="form-control" placeholder="Create A New Room" id="input-room">
+						<span class="input-group-btn input-group-lg">
+				           	<button class="btn btn-primary" type="button" id="bt-room">Create!</button>
+               			</span>
+               		</div>
+					<div class="panel panel-primary" >
+   						<div class="panel-heading">
+      						<h3 class="panel-title">Rooms</h3>
+   						</div>
+					    <ul class="list-group" id="online-rooms">
+						</ul>
 					</div>
 				</div>
 			</div>
