code style improved

--- a/hw/WebChat/index.html
+++ b/hw/WebChat/index.html
@@ -14,18 +14,8 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Nickname & Room</h4>
+						<h4 class="modal-title" id="myModalLabel">Input Your Nickname</h4>
 					</div>
-					<!--div class="modal-body">
-						<div class="input-group">
-							<div class="input-group-btn">
-                  				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Room<span class="caret"></span></button>
-                  				<ul class="dropdown-menu">
-                  				</ul>
-               				</div>
-               				<input type="text" class="form-control" placeholder="Create A New Room" id="input-room">
-            			</div>
-					</div-->
 					<div class="modal-body">
 						<div class="input-group">
 							<input type="text" class="form-control" placeholder="Nickname" id="input-nick">
@@ -107,12 +97,6 @@
 					</div>
 				</div>
 				<div class="col-lg-3"  id="create-room" style="height:600px; background:white; padding:10px; border-radius:5px; overflow:scroll; overflow-x:hidden">
-					<div class="input-group" style="margin-bottom:10px;">
-						<input type="text" class="form-control" placeholder="Create A New Room" id="input-room">
-						<span class="input-group-btn input-group-lg">
-				           	<button class="btn btn-primary" type="button" id="bt-room">Create!</button>
-               			</span>
-               		</div>
 					<div class="panel panel-primary" >
    						<div class="panel-heading">
       						<h3 class="panel-title">Rooms</h3>
@@ -120,6 +104,12 @@
 					    <ul class="list-group" id="online-rooms">
 						</ul>
 					</div>
+					<div class="input-group" style="margin-bottom:10px;">
+						<input type="text" class="form-control" placeholder="Create A New Room" id="input-room">
+						<span class="input-group-btn input-group-lg">
+				           	<button class="btn btn-primary" type="button" id="bt-room">Create!</button>
+               			</span>
+               		</div>
 				</div>
 			</div>
 		</div>
