--- a/hw/WebChat/index.html
+++ b/hw/WebChat/index.html
@@ -5,9 +5,22 @@
 		<meta http-equiv="Content-Type" content="text/html">
 		<title>Web Chat</title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 		<script type='text/javascript' src='js/jquery-2.1.4.min.js'></script>
 		<script type='text/javascript' src="js/firebase.js"></script>
 		<script type='text/javascript' src='js/bootstrap.min.js'></script>
+		<style>
+			#banner-text { 
+				width: 100%; 
+				text-align:center;
+				position:relative;
+				font: 90px/1.1em 'opensans-bold', sans-serif;
+				color: #fff;
+				letter-spacing: -2px;
+				margin: 0 auto 18px auto;
+				text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+			}
+		</style>
 	</head>
 	<body style="height:676px; background:gray;">
 		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -18,9 +31,9 @@
 					</div>
 					<div class="modal-body">
 						<div class="input-group">
-							<input type="text" class="form-control" placeholder="Nickname" id="input-nick">
+							<input type="text" class="input-lg form-control" placeholder="Nickname" id="input-nick">
 							<span class="input-group-btn input-group-lg">
-				            	<button class="btn btn-primary" type="button" id="bt-nick">Start Chat!</button>
+				            	<button class="btn btn-primary btn-lg" type="button" id="bt-nick">Start Chat!</button>
                				</span>
                			</div>
 					</div>
@@ -29,7 +42,7 @@
 		</div><!-- /.modal -->		
 		<div class="container">
 			<div class="row">
-				<h1 class="text-center">Web Online Chat</h1>
+				<h1 class="text-center" id="banner-text">Web Online Chat</h1>
 			</div>
 			<div class="row">
 				<div class="col-lg-3" style="height:600px; background:white; padding:10px; border-radius:5px; overflow:scroll; overflow-x:hidden">
@@ -42,56 +55,56 @@
 					</div>
 				</div>
 				<div class="col-lg-6" style="height:600px;">
-					<div class="row" id='div-message' style="width:100%; height:85%; background:white; border-radius:5px; margin:10px; overflow:scroll; overflow-x:hidden;">
+					<div class="row" id='div-message' style="width:100%; height:92%; margin:0; background:white; border-radius:5px; overflow:scroll; overflow-x:hidden;">
 						 <ul id='messages' class="list-group" style="word-break:break-all;"></ul>
 					</div>
-					<div class="row">
-						<div class="input-group" style="width:95%; margin:10px;">
+					<div class="row" style="width:100%;">
+						<div class="input-group" style="width:100%; margin-left:15px;  margin-top:5px;">
 							<div class="input-group-btn">
-								<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">emoji <span class="caret"></span></button>
+								<button type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown">emoji <span class="caret"></span></button>
 								<ul class="dropdown-menu">
 									<li class="divider"></li>
 									<div class="row">
 										<div class="col-lg-4">
-											<li><a href="#" id="smile"><img src="images/smile.png" class="emoji" style="height:30px;width:30px;"></a></li>
+											<li><a  id="smile"><img src="images/smile.png" class="emoji" style="height:30px;width:30px;"></a></li>
 										</div>
 										<div class="col-lg-4">
-											<li><a href="#" id="laugh"><img src="images/laugh.png" class="emoji" style="height:30px;width:30px;"></a></li>
+											<li><a  id="laugh"><img src="images/laugh.png" class="emoji" style="height:30px;width:30px;"></a></li>
 										</div>
 										<div class="col-lg-4">
-											<li><a href="#" id="blue"><img src="images/blue.png" class="emoji" style="height:30px;width:30px;"></a></li>
-										</div>
-									</div>
-									<li class="divider"></li>
-									<div class="row">
-										<div class="col-lg-4">
-											<li><a href="#" id="cry"><img src="images/cry.png" class="emoji" style="height:30px;width:30px;"></a></li>
-										</div>
-										<div class="col-lg-4">
-											<li><a href="#" id="lcry"><img src="images/lcry.png" class="emoji" style="height:30px;width:30px;"></a></li>
-										</div>
-										<div class="col-lg-4">
-											<li><a href="#" id="terrified"><img src="images/terrified.png" class="emoji" style="height:30px;width:30px;"></a></li>
+											<li><a  id="blue"><img src="images/blue.png" class="emoji" style="height:30px;width:30px;"></a></li>
 										</div>
 									</div>
 									<li class="divider"></li>
 									<div class="row">
 										<div class="col-lg-4">
-											<li><a href="#" id="daze"><img src="images/daze.png" class="emoji" style="height:30px;width:30px;"></a></li>
+											<li><a  id="cry"><img src="images/cry.png" class="emoji" style="height:30px;width:30px;"></a></li>
 										</div>
 										<div class="col-lg-4">
-											<li><a href="#" id="angry"><img src="images/angry.png" class="emoji" style="height:30px;width:30px;"></a></li>
+											<li><a  id="lcry"><img src="images/lcry.png" class="emoji" style="height:30px;width:30px;"></a></li>
 										</div>
 										<div class="col-lg-4">
-											<li><a href="#" id="handsup"><img src="images/handsup.png" class="emoji" style="height:30px;width:30px;"></a></li>
+											<li><a  id="terrified"><img src="images/terrified.png" class="emoji" style="height:30px;width:30px;"></a></li>
+										</div>
+									</div>
+									<li class="divider"></li>
+									<div class="row">
+										<div class="col-lg-4">
+											<li><a  id="daze"><img src="images/daze.png" class="emoji" style="height:30px;width:30px;"></a></li>
+										</div>
+										<div class="col-lg-4">
+											<li><a  id="angry"><img src="images/angry.png" class="emoji" style="height:30px;width:30px;"></a></li>
+										</div>
+										<div class="col-lg-4">
+											<li><a  id="handsup"><img src="images/handsup.png" class="emoji" style="height:30px;width:30px;"></a></li>
 										</div>
 									</div>
 									<li class="divider"></li>
 								</ul>
 							</div><!-- /btn-group -->
-               				<input type="text" class="form-control" id="messageInput" placeholder='Type a message...'>
+               				<input type="text" class="input-lg form-control" id="messageInput" placeholder='Type a message...'>
                				<span class="input-group-btn input-group-lg">
-				                 <button class="btn btn-success" type="button" id="sendButton">Send</button>
+				                 <button class="btn btn-success btn-lg" type="button" id="sendButton">Send</button>
                				</span>
             			</div><!-- /input-group -->
 					</div>
