--- a/index.html
+++ b/index.html
@@ -62,14 +62,17 @@
 					<h1><span>Homeworks</span></h1>
 				</div>
 				<div style="float:right; text-align:left; margin-right:100px; width:70%">
-					<div style="float:left; width:33%">
+					<div style="float:left; width:20%">
 						<a class="button" href="http://zhoulw13.github.io">1</a>
 					</div>
-					<div style="float:left; width:33%">
+					<div style="float:left; width:20%">
 						<a class="button" href="hw/waterfall.Ajax/index.html">4</a>
 					</div>
-					<div style="float:left; width:33%">
+					<div style="float:left; width:20%">
 						<a class="button" href="hw/WebChat/index.html">5</a>
+					</div>
+					<div style="float:left; width:30%">
+						<a class="button" href="hw/Tank/start.html">Tank Game</a>
 					</div>
 				</div>
 			</div>
