--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<a class="button" href="hw/WebChat/index.html">5</a>
 					</div>
 					<div style="float:left; width:30%">
-						<a class="button" href="hw/Tank/start.html">Tank Game</a>
+						<a class="button" href="battleCity2015">Tank Game</a>
 					</div>
 				</div>
 			</div>
