--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
 		<section id="Blog" style="height=600px;">
 			<hr />
 			<article id="info">
+				<h2>记第一次结对编程</h2>
+				<p class="info">Game of Life * Sept 27, 2015</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;今天是2015年9月27日，过去的两天我与黄冰洋同学俗称坚哥通过结对编程完成了前端游戏<span>Game of Life</span>的制作</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;一开始看到结对编程这个东西，觉得是某个程序员搞出来整人的吧，哪有两个人用一台电脑写代码的！不过也觉得好奇，好像很好玩的样子，于是就开始了</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;整个游戏逻辑还是挺简单的，所以领航员的作用在这里显得不大，两个人随便讨论一下便可以继续写，领航员相对来说更轻松一些，时不时可以玩会手机</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;而当我在写代码的时候，便发现了结对编程的优点。由于平时我比较马虎，写代码经常犯一些很二的错误发现不了，之后调试又得浪费一些时间。这次有了队友在旁边看着，写出来的bug一下子就被发现了，省了之后调试的时间。毕竟是四只眼睛看着，比只有两个眼睛看着还得分神写代码的一般编程自然更难出错误</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;于是我又关于结对编程想了想，它在哪些情况下比较适合使用。课上也说过了，逻辑复杂的情况两个人的讨论能更快解决问题，除此之外呢？两个人水平确实应该相当，不然会打起来（大雾）。然后人力资源肯定是要充足的时候吧。可能这最常见的情形就是需要快速开发上线的时候，这个时候只求速度，人力资源可以集中使用。</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;当然，有些程序员只喜欢在私密的空间编程又另说了。</p>
+			</article>
+			<hr />
+			<article id="info">
 				<h2>Hello World</h2>
 				<p class="info">第一篇日志 * July 07, 2015</p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;今天是2015年7月7日，我的<span>github</span>主页正式上线了！</p>
@@ -95,7 +106,7 @@
 							<p>QQ: </p>
 						</div>
 						<div style="float:left; text-align:left; margin-left:10px;">
-							<p>周立旺 / Zhou LiWang</p>
+							<p>周立旺 / Zhou Liwang</p>
 							<p>ZiJing Student dormitory 1#215B</p>
 							<p>Beijing, Haidian, Tsinghua University</p>
 							<p>18800159012</p>
@@ -124,7 +135,7 @@
 		</footer>
 		
 		<script type="text/javascript">
-			$('#info').readmore({
+			$('article').readmore({
 				moreLink: '<a href="#">Read More...</a>',
 				lessLink: '<a href="#">Less</a>',
 				maxHeight: 200,
